# AskMe

./: Dockerfile  README.md  pyproject.toml  run.sh
AskMe/: asgi.py  settings.py  urls.py  wsgi.py
AskMe/AskMe/: settings.py  urls.py
app/: models.py  views.py
app/management/commands/: filldb.py
app/migrations/: 0001_initial.py  0002_answerlike_created_at_answerlike_value_and_more.py
static/: ask.html  base.html  index.html  login.html  question.html  register.html  settings.html  style.css  tag.html
templates/: ask.html  hot.html  login.html  question.html  questions.html  register.html  settings.html  tag.html
templates/layout/: answer.html  base.html  paginator.html  question.html
