[tool.poetry]
name = "askme"
version = "0.1.0"
description = ""
authors = ["johanngorban <ivangorbanwork@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
