[tool.poetry]
name = "askme"
version = "0.1.0"
description = ""
authors = ["johanngorban <ivangorbanwork@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
dotenv = "^0.9.9"
psycopg = {extras = ["binary"], version = "^3.2.12"}
pillow = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
